[package]
name = "rust_be"
description = "A Rust-y Test backend!"
author = "ZeroLuckDev"
version = "0.1.0-SNAPSHOT"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.155"
dotenv = "0.15.0"
diesel = { version = "2.0.3", features = ["postgres"] }
utoipa = { version = "3.1.1", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "3.1.1", features = ["rocket", "debug-embed"] }